# slint-example2

./: README.md
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  main.rs  mvc.rs  util.rs
rust/src/mvc/: controllers.rs  models.rs  repositories.rs
rust/src/mvc/controllers/: frequency_preset_list_controller.rs  mission_list_controller.rs  power_preset_list_controller.rs  task_list_controller.rs
rust/src/mvc/models/: date_model.rs  frequency_model.rs  frequency_preset_model.rs  mission_model.rs  power_model.rs  power_preset_model.rs  task_model.rs  time_model.rs
rust/src/mvc/repositories/: mock_date_time_repository.rs  mock_frequency_preset_repository.rs  mock_mission_repository.rs  mock_power_preset_repository.rs  mock_task_repository.rs  traits.rs
rust/src/mvc/repositories/traits/: date_time_repository.rs  frequency_preset_repository.rs  mission_repository.rs  power_preset_repository.rs  task_repository.rs
ui/: common.slint  index.slint  tab1.slint  tab2.slint  tabs.slint
ui/adapters/: frequency_adapter.slint  mission_adapter.slint  power_adapter.slint  task_adapter.slint
ui/slint.old/: main_window.slint  main_window.slint.joe
ui/views/: create_frequency_preset_view.slint  create_mission_view.slint  create_power_preset_view.slint  create_task_view.slint  frequency_preset_list_view.slint  mission_list_view.slint  power_preset_list_view.slint  task_list_view.slint
ui/widgets/: frequency_preset_list_view.slint  key-handler.slint  mission_list_view.slint  mission_power_view.slint  my_power_value.slint  power_preset_list_view.slint  power_preset_values_view.slint  selection_list_view.slint  styling.slint
