# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "todo-mvc"
version = "1.8.0"
authors = ["Joe Mooney <info@joe.mooney>"]
edition = "2021"
build = "build.rs"
publish = false
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "todo_lib_mvc"

[[bin]]
path = "src/main.rs"
name = "todo-mvc"

[dependencies]
slint = { version = "1.9.1", features = ["serde", "backend-android-activity-06"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
chrono = { version = "0.4.39" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.99" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = { version = "1.9.1" }

[dev-dependencies]
#i-slint-backend-testing = { workspace = true }
